# Bares

./: README.md  author.md
source/: CMakeLists.txt  Calculator.cpp  Calculator.h  Parsing.cpp  Parsing.h  main.cpp  pos_fixed.cpp  pos_fixed.h  teste  tokenizer.cpp  tokenizer.h
